--- a/cliente_entregable/android/app/src/main/AndroidManifest.xml
+++ b/cliente_entregable/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.cliente_entregable">
    <application
-        android:label="cliente_entregable"
+        android:label="Jardin Carrusel"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
