--- a/cliente_entregable/pubspec.yaml
+++ b/cliente_entregable/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   material_design_icons_flutter: ^5.0.6595
   http: ^0.13.4
   ionicons: ^0.1.2
+  flutter_zoom_drawer: ^3.0.2
 
 dev_dependencies:
   flutter_test:
