--- a/cliente_entregable/pubspec.yaml
+++ b/cliente_entregable/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   http: ^0.13.4
   ionicons: ^0.1.2
   flutter_zoom_drawer: ^3.0.2
+  flutter_speed_dial: ^6.0.0
 
 dev_dependencies:
   flutter_test:
