--- a/cliente_entregable/pubspec.yaml
+++ b/cliente_entregable/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   ionicons: ^0.1.2
   flutter_zoom_drawer: ^3.0.2
   flutter_speed_dial: ^6.0.0
+  intl: ^0.17.0
 
 dev_dependencies:
   flutter_test:
