--- a/cliente_entregable/pubspec.yaml
+++ b/cliente_entregable/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   flutter_speed_dial: ^6.0.0
   intl: ^0.17.0
   material_design_icons_flutter: ^5.0.6595
+  flutter_localizations:
+    sdk: flutter
 
 dev_dependencies:
   flutter_test:
