--- a/cliente_entregable/android/app/src/main/AndroidManifest.xml
+++ b/cliente_entregable/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.cliente_entregable">
+    <uses-permission android:name="android.permission.INTERNET" />
    <application
         android:label="Jardin Carrusel"
+        android:usesCleartextTraffic="true"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
