--- a/cliente_entregable/pubspec.yaml
+++ b/cliente_entregable/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   flutter_speed_dial: ^6.0.0
   intl: ^0.17.0
   material_design_icons_flutter: ^5.0.6595
+  image_picker: ^0.8.5+3
   flutter_localizations:
     sdk: flutter
 
