--- a/cliente_entregable/pubspec.yaml
+++ b/cliente_entregable/pubspec.yaml
@@ -35,21 +35,27 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   http: ^0.13.4
   intl: ^0.17.0
-  ionicons: ^0.1.2
+  provider: ^5.0.0
   cool_alert: ^1.1.0
-  firebase_core: ^1.17.1
-  firebase_auth: ^3.3.19
   image_picker: ^0.8.5+3
-  cupertino_icons: ^1.0.2
-  cloud_firestore: ^3.1.17
   dart_rut_validator: ^1.1.0
   flutter_zoom_drawer: ^3.0.2
-  shared_preferences: ^2.0.15
   top_snackbar_flutter: ^2.0.0
-  material_design_icons_flutter: ^5.0.6595
   
   flutter_localizations:
     sdk: flutter
+  
+  # ICONOS
+  ionicons: ^0.1.2
+  cupertino_icons: ^1.0.2
+  material_design_icons_flutter: ^5.0.6595
+
+  #FIREBASE
+  firebase_core: ^1.17.1
+  firebase_auth: ^3.3.19
+  google_sign_in: ^5.4.0
+  cloud_firestore: ^3.1.17
+  shared_preferences: ^2.0.15
 
 dev_dependencies:
   flutter_test:
